-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 2.2.0
-
Linux 64bit, binary packages from midnight
Dragging a webview on the scene doesn't work for me on a fresh file. Most of the times the webview is visible in the states editor , but not visible nor selectable (after dropping) in the visual editor. I also had the case where, after dropping it, it was visible , but at the wrong position (seemingly wrong coordinate system), and not movable with the mouse afterwards.
- relates to
-
QTCREATORBUG-8558 Dragging a WebView on the scene does not work correctly
-
- Closed
-